# packrat

./: .gitignore  Cargo.toml  self-signed.sh
certs/: localhost.hex  localhost.key
client/: Cargo.toml  index.html
client/.cargo/: config.toml
client/src/: app.rs  lib.rs  main.rs  sock.rs
common/: Cargo.toml
common/src/: lib.rs  localhost.crt
manager/: Cargo.toml
manager/src/: main.rs
server/: Cargo.toml
server/src/: database.rs  main.rs
