[package]
name = "client"
version = "0.1.0"
authors = ["Duncan Freeman <duncan.freeman1@gmail.com>"]
edition = "2021"

[dependencies]
egui = "0.28"
eframe = { version = "0.28", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "glow",
    "persistence",
] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
getrandom = { version = "0.2", features = ["js"] }

common = { path = "../common" }
tarpc = { git = "https://github.com/Masterchef365/tarpc.git", branch = "whiz-port", features = ["serde1"] }

ewebsock = "0.6.0"

poll-promise = { git = "https://github.com/Masterchef365/poll-promise.git", branch = "wasm", features = ["web"] }
futures-util = "0.3.30"


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"
