[package]
name = "client"
version = "0.1.0"
authors = ["Duncan Freeman <duncan.freeman1@gmail.com>"]
edition = "2021"

[dependencies]
egui = "0.28"
eframe = { version = "0.28", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "glow",
    "persistence",
] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
getrandom = { version = "0.2", features = ["js"] }

common = { path = "../common" }
tarpc = { git = "https://github.com/Masterchef365/tarpc.git", branch = "whiz-port", features = ["serde1", "serde-transport-bincode"] }

#ewebsock-async-simple = { git = "https://github.com/Masterchef365/ewebsock-async-simple.git", branch = "main" }
ewebsock-async-simple = { path = "../../ewebsock-async-simple" }

ewebsock-async-tarpc-utils = { git = "https://github.com/Masterchef365/ewebsock-async-tarpc-utils", branch = "main" }
#ewebsock-async-tarpc-utils = { path = "../../ewebsock-async-tarpc-utils" }

futures-util = "0.3.30"
thiserror = "1.0.63"
bincode = "1.3.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
poll-promise = { git = "https://github.com/Masterchef365/poll-promise.git", branch = "wasm", features = ["tokio"] }
env_logger = "0.10"

[target.'cfg(target_arch = "wasm32")'.dependencies]
poll-promise = { git = "https://github.com/Masterchef365/poll-promise.git", branch = "wasm", features = ["web"] }
