[package]
name = "manager"
version = "0.1.0"
edition = "2021"

[dependencies]
tarpc = "0.34.0"

tokio-tungstenite = "*"
tokio = { version = "1", features = ["full"] }
futures-util = { version = "0.3.30", features = ["sink"] }

log = "0.4.21"

common = { path = "../common/" }
bincode = "1.3.3"
anyhow = "1"
