[package]
name = "manager"
version = "0.1.0"
edition = "2021"

[dependencies]
tarpc = { git = "https://github.com/Masterchef365/tarpc.git", branch = "whiz-port", features = ["serde1"] }

tokio-tungstenite = "*"
tokio = { version = "1", features = ["full"] }
futures-util = { version = "0.3.30", features = ["sink"] }
#ewebsock-async-tarpc-utils = { git = "https://github.com/Masterchef365/ewebsock-async-tarpc-utils", branch = "main" }
ewebsock-async-tarpc-utils = { path = "../../ewebsock-async-tarpc-utils", features = ["tokio-tungstenite"] }

log = "0.4.21"

common = { path = "../common/" }
anyhow = "1"
