[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
quic-session = { git = "https://github.com/Masterchef365/fckweb.git", branch = "main" }
framework = { git = "https://github.com/Masterchef365/fckweb.git", branch = "main" }
common = { path = "../common" }
tokio = { version = "1.40", features = ["full"] }
